language/move-lang/tests/move_check/typing/bind_pop_resource.exp
error[E05001]: ability constraint not satisfied
  ┌─ tests/move_check/typing/bind_pop_resource.move:5:13
  │
2 │     struct R {}
  │            - To satisfy the constraint, the 'drop' ability would need to be added here
  ·
5 │         let _: R = R{};
  │             ^  - The type '0x8675309::M::R' does not have the ability 'drop'
  │             │   
  │             Cannot ignore values without the 'drop' ability. The value must be used

error[E05001]: ability constraint not satisfied
  ┌─ tests/move_check/typing/bind_pop_resource.move:9:14
  │
2 │     struct R {}
  │            - To satisfy the constraint, the 'drop' ability would need to be added here
  ·
9 │         let (_, _):(R, R) = (R{}, R{});
  │              ^      - The type '0x8675309::M::R' does not have the ability 'drop'
  │              │       
  │              Cannot ignore values without the 'drop' ability. The value must be used

error[E05001]: ability constraint not satisfied
  ┌─ tests/move_check/typing/bind_pop_resource.move:9:17
  │
2 │     struct R {}
  │            - To satisfy the constraint, the 'drop' ability would need to be added here
  ·
9 │         let (_, _):(R, R) = (R{}, R{});
  │                 ^      - The type '0x8675309::M::R' does not have the ability 'drop'
  │                 │       
  │                 Cannot ignore values without the 'drop' ability. The value must be used

